Fix h2 position on smaller screen size

--- a/src/style.css
+++ b/src/style.css
@@ -31,6 +31,10 @@ body {
   z-index: 0;
 }
 
+body #menu-btn {
+  display: none;
+}
+
 body .sidebar {
   background-color: rgb(35, 35, 35);
   max-width: 300px;
@@ -346,7 +350,7 @@ body .wholeModal .buttons {
     overflow: hidden;
   }
 
-  #menu-btn {
+  body #menu-btn {
     background-color: rgb(35, 35, 35);
     display: flex;
     justify-content: space-between;
@@ -357,5 +361,9 @@ body .wholeModal .buttons {
 @media screen and (max-width: 500px) {
   html {
     font-size: 10px;
+  }
+
+  body .main h2 {
+    text-align: center;
   }
 }
